<resources>
    <string name="app_name">SEL</string>
    <string name="login_register_button">Chưa có tài khoản? <b>Đăng ký ngay</b></string>
    <string name="signup_register_button">Bạn có tài khoản rồi? <b>Đăng nhập ngay</b></string>
    <string name="signup_forgot_button">Bạn đã cập nhật lại mật khẩu? <b>Đăng nhập ngay</b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SUNNY SKY</string>
    <string name="nav_header_subtitle">Language Learning Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_admin">Quản Lý</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_done">Done</string>
    <string name="text_email_address_title">Email Address</string>
    <string name="text_hint_email">xyz@gmail.com</string>
    <string name="text_password_title">Password</string>
    <string name="text_password_title_cf">Password Confirm</string>
    <string name="text_password_hint">••••••••••••</string>
    <string name="text_recovery_password">Recovery Password</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_new_user_create_account"><font color="#6A6A6A">New User?</font> <font color="#1A1D1E"> Create Account</font></string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_sign_in_with_google">Sign In With Google</string>
    <string name="text_sign_up_with_google">Sign Up With Google</string>
    <string name="text_your_name">Your Name</string>
    <string name="text_already_have_account_log_in"><font color="#1A1D1E">Already Have Account?</font> <font color="#6A6A6A"> Log In</font></string>
    <string name="text_reset_password">Reset Password</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="who_invented_android_studio">Who invented android studio?</string>
    <string name="p_n_ch_nh_s_ch_l">Đáp án chính xác là : </string>
    <string name="quit">Quit</string>


</resources>