<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.sel.screen.user.register.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_of_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/layout_header"
                layout="@layout/layout_header" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_of_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/layout_of_header">

                    <include layout="@layout/layout_title_auth_screen"
                        android:id="@+id/layout_title_auth_screen"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include
                        android:id="@+id/layout_name"
                        layout="@layout/layout_input_common" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include
                        android:id="@+id/layout_email"
                        layout="@layout/layout_email" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:layout_height="wrap_content">

                    <include
                        android:id="@+id/layout_password"
                        layout="@layout/layout_password" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:layout_height="wrap_content">

                    <include
                        android:id="@+id/layout_password_cf"
                        layout="@layout/layout_password_confirm" />
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_login"
                    style="@style/ButtonStyleMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:paddingStart="@dimen/dimen_10"
                    android:paddingTop="@dimen/dimen_10"
                    android:paddingEnd="@dimen/dimen_10"
                    android:paddingBottom="@dimen/dimen_16"
                    android:text="@string/text_sign_up" />


                <LinearLayout
                    android:id="@+id/linLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginEnd="@dimen/dimen_12"
                    android:background="@drawable/background_button_accent_2"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_10">

                    <ImageButton
                        android:id="@+id/camera_ibtn"
                        android:layout_width="@dimen/dimen_16"
                        android:layout_height="@dimen/dimen_16"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_google" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/TextLayoutBasicStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:gravity="center"
                        android:paddingBottom="@dimen/dimen_6"
                        android:text="@string/text_sign_up_with_google"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_go_back_login"
                    style="@style/TextLayoutBasicStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_60"
                    android:layout_marginEnd="@dimen/dimen_12"
                    android:text="@string/text_already_have_account_log_in"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
